--- a/src/resources/ui/nautilus-properties-window.ui
+++ b/src/resources/ui/nautilus-properties-window.ui
@@ -1322,11 +1322,10 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButtonBox" id="app_chooser_button_box">
+                  <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="spacing">6</property>
-                    <property name="layout_style">end</property>
                     <child>
                       <object class="GtkButton" id="reset_button">
                         <property name="label" translatable="yes">Reset</property>
@@ -1338,7 +1337,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="position">0</property>
-                        <property name="secondary">True</property>
+                        <property name="pack-type">end</property>
                       </packing>
                     </child>
                     <child>
